methods.picture.MethodsPicture.scala.error
Erreur de compilation :
MethodsPicture:3: error: too many arguments for method faireMotif: ()Unit
    faireMotif(c)
              ^MethodsPicture:14: error: not found: type color
def faireV(c:color){
             ^