methods.picture.MethodsPicture.scala.code
override def run(){
  for (i <- 1 to 9){
    faireMotif(c)
  	avance(7)
		if (i%3==0){
      gauche()
      avance(7)
      droite()
    }
  }
}


def faireV(c:color){
  avance(2)
  setCouleurBrosse(c)
  baisseBrosse()
  leveBrosse()
  gauche()
  avance()
  droite()
  avance()
  baisseBrosse()
  leveBrosse()
  avance()
  droite()
  avance()
  baisseBrosse()
  leveBrosse()
  gauche()
  avance(2)
  gauche()
}

def faireMotif(){
  	faireV(Color.YELLOW)
    faireV(Color.RED)
    faireV(Color.BLUE)
    faireV(Color.GREEN)
}